apps/teruko/middleware-cors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-headers
  namespace: teruko # your app namespace
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - Content-Type
      - Authorization
      - X-Requested-With
      - apollo-require-preflight
    accessControlAllowOriginList:
      - "https://www.pixiv.net"
    accessControlMaxAge: 100
    accessControlAllowCredentials: true
    addVaryHeader: true
