apps/teruko/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teruko
  namespace: teruko
  labels:
    app: teruko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teruko
  template:
    metadata:
      labels:
        app: teruko
    spec:
      containers:
        - name: teruko
          image: registry.licht/teruko-svelte:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            tcpSocket:
              port: http
          volumeMounts:
            - name: teruko
              mountPath: /data
      volumes:
        - name: teruko
          hostPath:
            path: /mnt/data/teruko
            type: Directory
