apps/teruko/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teruko
  namespace: teruko
spec:
  type: ExternalName
  externalName: tsubasa
  ports:
    - port: 7777
      targetPort: 7777
