apps/teruko/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teruko
  namespace: teruko
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`teruko.licht`)
      priority: 10
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik-outpost
      services:
        - name: teruko
          port: 3000
    - kind: Rule
      match: Host(`teruko.licht`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-outpost
          namespace: authentik-outpost
          port: 9000
  tls:
    secretName: teruko-tls
